# kona

./: .dockerignore  .gitignore  .gitmodules  .monorepo  CHAIN_ID_USAGE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE.md  README.md  current_l1.md  deny.toml  flake.nix  justfile  jwt.hex  lcov.info  light_cl.md  lychee.toml  mise.toml  rustc-ice-2025-06-13T06_42_58-9239.txt  typos.toml
.config/: kurtosis_network_params.yaml  kurtosis_network_params_supervisor.yaml  monorepo
.github/: CODEOWNERS  codecov.yml
.github/workflows/: acceptance-tests.yaml  action_tests.yaml  book.yaml  client_host.yaml  deny.yaml  docker-nightly.yaml  docker.yaml  docs.yaml  e2e_tests.yaml  e2e_tests_supervisor.yaml  lychee.yaml  monorepo.yaml  node_e2e_conductor_tests.yaml  node_e2e_kurtosis_tests.yaml  node_e2e_sysgo_tests.yaml  proof.yaml  publish_artifacts.yaml  rust_ci.yaml  stale.yaml  supervisor.yaml  supervisor_e2e_kurtosis.yaml  supervisor_e2e_sysgo.yaml  sync.yaml
book/src/: SUMMARY.md  monorepo.md
crates/derive/: CHANGELOG.md  Cargo.toml
crates/driver/: CHANGELOG.md  Cargo.toml
crates/executor/: CHANGELOG.md
crates/interop/: CHANGELOG.md
crates/node/net/: Cargo.toml  README.md
crates/node/net/src/: builder.rs  driver.rs  error.rs  lib.rs
crates/proof/stateless-builder/: Cargo.toml
crates/proof/stateless-builder/src/: errors.rs  lib.rs  test_utils.rs
crates/proof/stateless-builder/src/builder/: core.rs  env.rs  mod.rs
crates/proof/stateless-builder/src/db/: mod.rs
crates/proof/stateless-builder/testdata/block-25946050/kv/: 000028.sst  IDENTITY  LOG  LOG.old.1743695905037954  LOG.old.1743695933858638  LOG.old.1743695946372980  LOG.old.1743696128029509  MANIFEST-000025
crates/proof/stateless-builder/testdata/block-25946051/kv/: 000051.sst  IDENTITY  LOG  LOG.old.1743696646161864  LOG.old.1743696717901855  LOG.old.1743697038534393  LOG.old.1743697127678334  LOG.old.1743697224745652  LOG.old.1743697308391047  LOG.old.1743697399811533  LOG.old.1743697481891519  MANIFEST-000048
crates/proof/stateless-builder/testdata/block-25946052/kv/: 000051.sst  000054.sst  000059.sst  IDENTITY  LOG  LOG.old.1743697669440458  LOG.old.1743697813550070  LOG.old.1743697865476098  LOG.old.1743698001967613  LOG.old.1743698062912058  LOG.old.1743698117591503  LOG.old.1743698375848310  LOG.old.1743698459787215  LOG.old.1743698851303433  LOG.old.1743699026502236  MANIFEST-000061
crates/supervisor/core/: Cargo.toml
crates/supervisor/core/src/: chain_processor.rs  error.rs  lib.rs  supervisor.rs  types.rs
crates/supervisor/core/src/chain_processor/: actor.rs  chain.rs  error.rs  metrics.rs  mod.rs  task.rs
crates/supervisor/core/src/chain_processor/handlers/: cross_chain.rs  finalized.rs  invalidation.rs  mod.rs  origin.rs  safe_block.rs  unsafe_block.rs
crates/supervisor/core/src/chain_processor/state/: mod.rs  processor.rs  state.rs
crates/supervisor/core/src/config/: config.rs  core_config.rs  mod.rs  rollup_config_set.rs
crates/supervisor/core/src/event/: chain.rs
crates/supervisor/core/src/l1_watcher/: mod.rs  reorg.rs  watcher.rs
crates/supervisor/core/src/logindexer/: error.rs  indexer.rs  mod.rs  types.rs  util.rs
crates/supervisor/core/src/reorg/: error.rs  handler.rs  metrics.rs  mod.rs  task.rs
crates/supervisor/core/src/rewinder/: chain.rs
crates/supervisor/core/src/rpc/: metrics.rs  mod.rs  server.rs
crates/supervisor/core/src/safety_checker/: cross.rs  error.rs  task.rs
crates/supervisor/core/src/state/: mod.rs
crates/supervisor/core/src/state/log/: table.rs
crates/supervisor/core/src/syncnode/: actor.rs  client.rs  command.rs  error.rs  event.rs  jsonrpsee.rs  metrics.rs  mod.rs  node.rs  resetter.rs  task.rs  traits.rs  types.rs
crates/supervisor/core/src/types/: log.rs  message.rs
crates/supervisor/service/: Cargo.toml
crates/supervisor/service/src/: lib.rs  service.rs
crates/supervisor/service/src/actors/: l1_watcher_rpc.rs  metric.rs  metric_reporter.rs  mod.rs  node.rs  processor.rs  rpc.rs  traits.rs
crates/supervisor/storage/: Cargo.toml
crates/supervisor/storage/src/: chaindb.rs  chaindb_factory.rs  error.rs  lib.rs  metrics.rs  traits.rs
crates/supervisor/storage/src/log/: mdbx.rs  mod.rs  storage.rs  table.rs
crates/supervisor/storage/src/log/models/: log.rs  mod.rs
crates/supervisor/storage/src/models/: block.rs  common.rs  derivation.rs  head_ref.rs  log.rs  mod.rs
crates/supervisor/storage/src/providers/: derivation_provider.rs  head_ref_provider.rs  log_provider.rs  mod.rs  safety_head_ref_provider.rs
crates/supervisor/types/: Cargo.toml
crates/supervisor/types/src/: access_list.rs  head.rs  lib.rs  receipt.rs  types.rs
crates/utilities/cli/: Cargo.toml
crates/utilities/cli/src/: backtrace.rs  error.rs  lib.rs  log.rs  prometheus.rs  secrets.rs  tracing.rs  unified_metrics.rs
crates/utilities/cli/src/flags/: globals.rs  metrics.rs
docs/: justfile  package-lock.json  sidebar.ts  vocs.config.ts
scripts/: check_no_std.sh
sp1/: LICENSE-THIRD-PARTY  README.md  justfile
sp1/crates/client/: Cargo.toml
sp1/crates/client/src/: boot.rs  client.rs  lib.rs  types.rs
sp1/crates/client/src/oracle/: blob_provider.rs
sp1/crates/client/src/precompiles/: factory.rs  mod.rs
sp1/crates/client/src/witness/: executor.rs  mod.rs  preimage_store.rs
sp1/crates/ethereum/client/: Cargo.toml
sp1/crates/ethereum/client/src/: executor.rs  lib.rs
sp1/crates/ethereum/host/: Cargo.toml
sp1/crates/ethereum/host/src/: host.rs  lib.rs  witness_generator.rs
sp1/crates/host/: Cargo.toml
sp1/crates/host/src/: block_range.rs  constants.rs  contract.rs  fetcher.rs  host.rs  lib.rs  logger.rs  metrics.rs  network.rs  proof.rs  stats.rs
sp1/crates/host/src/witness_generation/: mod.rs  online_blob_store.rs  preimage_witness_collector.rs  traits.rs
sp1/programs/aggregation/: Cargo.toml
sp1/programs/aggregation/src/: main.rs
sp1/programs/range/: Cargo.toml
sp1/programs/range/src/: main.rs
tests/: .gitignore  Justfile  README.md  README.md.bak  go.mod  go.sum  justfile  packages
tests/node/: mod.go  (+8 more)
(+591 files in other folders)
