[package]
name = "kona-supervisor-core"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# Workspace
kona-interop.workspace = true
kona-supervisor-rpc = { workspace = true, features = ["jsonrpsee"] }

# Alloy
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
op-alloy-consensus.workspace = true

# Serde
serde = { workspace = true, optional = true }

# Misc
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Bi-directional RPC
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jsonrpsee = { workspace = true, features = ["macros", "client", "client-core"] }
tokio.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
jsonwebtoken = "9"

# `metrics` feature
metrics.workspace = true

[lints]
workspace = true

[features]
default = []
serde = [
  "dep:serde",
  "alloy-eips/serde",
  "alloy-primitives/serde",
]

