[package]
name = "kona-supervisor-core"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# Workspace
kona-interop.workspace = true
kona-supervisor-rpc = { workspace = true, features = ["jsonrpsee"] }
kona-protocol.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
op-alloy-consensus.workspace = true

# External Dependencies
jsonrpsee = { workspace = true, features = [ "ws-client", "macros", "server" ] }
serde.workspace = true
async-trait.workspace = true
tracing = { workspace = true }
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }

# `metrics` feature
metrics = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true