[package]
name = "kona-supervisor-storage"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# Alloy
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }

# Misc
eyre = "0.6"
bincode = "1.3.3"
tempfile = "3.20.0"
rand = "0.9.1"

#reth
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true

