[package]
name = "kona-supervisor-storage"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# Alloy
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }

# Misc
serde = { version = "1.0.219", features = ["derive"] }
bytes = "1.10.1"
modular-bitfield = "0.11.2" # lastest is not compatible with reth
test-fuzz = "7.2.0"

#reth
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

[lints]
workspace = true

