[package]
name = "kona-supervisor-types"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# Alloy
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }

[lints]
workspace = true
