[package]
name = "kona-cli"
version = "0.3.2"
description = "Shared CLI utilities for Kona crates"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-genesis.workspace = true
kona-registry.workspace = true

# Alloy
alloy-chains.workspace = true

# General
tracing.workspace = true
serde = { workspace = true, features = ["derive"]}
clap = { workspace = true, features = ["derive", "env"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json", "tracing-log"] }
tracing-appender.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-process.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util.workspace = true
http.workspace = true

# `secrets` feature
libp2p = { workspace = true, features = ["secp256k1"], optional = true }
alloy-primitives.workspace = true

[dev-dependencies]
rstest.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
secrets = [ "dep:libp2p" ]
