[package]
name = "kona-sp1-range"
version = "0.0.1" 
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rkyv.workspace = true
anyhow.workspace = true

# kona
kona-proof.workspace = true
kona-sp1-client-utils.workspace = true
kona-sp1-ethereum-client-utils.workspace = true

# sp1
sp1-zkvm.workspace = true

# `tracing-subscriber` feature dependencies
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
embedded = [ "sp1-zkvm/embedded" ]
tracing-subscriber = [ "dep:tracing", "dep:tracing-subscriber" ]

[lints]
workspace = true
