[package]
name = "kona-sp1-ethereum-client-utils"
version = "0.0.1" 
license.workspace = true
edition.workspace = true

[dependencies]
# local
kona-sp1-client-utils.workspace = true

# kona
kona-derive.workspace = true
kona-driver.workspace = true
kona-executor.workspace = true
kona-genesis.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

# general
anyhow.workspace = true
async-trait.workspace = true
spin.workspace = true
