[package]
name = "kona-sp1-ethereum-host-utils"
version = "0.0.1" 
license.workspace = true
edition.workspace = true

[dependencies]
# sp1
sp1-sdk.workspace = true

# local
kona-sp1-client-utils.workspace = true
kona-sp1-ethereum-client-utils.workspace = true
kona-sp1-host-utils.workspace = true

# kona
kona-derive.workspace = true
kona-host.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true

# general
anyhow.workspace = true
async-trait.workspace = true
rkyv.workspace = true
